force-app/main/default/objects/Site_Preferred_Technician__c/Site_Preferred_Technician__c.object-meta.xml
<CustomObject>
    <label>Site Preferred Technician</label>
    <nameField>
        <displayFormat>SPT-{00000000}</displayFormat>
        <label>Site Preferred Technician</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Preferred Technicians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>