force-app/main/default/objects/Site_Preferred_Technician__c/fields/My_Induction__c.field-meta.xml
<CustomField>
    <fullName>My_Induction__c</fullName>
    <formula>IF(Technician__r.Related_User__r.Id =  $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Induction</label>
    <type>Checkbox</type>
</CustomField>