force-app/main/default/objects/Site_Preferred_Technician__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Site Preferred Technicians</relationshipLabel>
    <relationshipName>Site_Preferred_Technicians</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>