force-app/main/default/objects/Site_Preferred_Technician__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Site Preferred Technicians</relationshipLabel>
    <relationshipName>Site_Preferred_Technicians</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>