force-app/main/default/objects/Site_Preferred_Technician__c/validationRules/VR_SPT01_EndDateMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SPT01_EndDateMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(End_Date__c ) &amp;&amp;  ISPICKVAL(Service_Contract__r.Restricted_Site__c , &#39;Yes&#39;)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date is mandatory when the related Contract is for a Restricted Site</errorMessage>
</ValidationRule>